--- a/.github/workflows/gradle-build-pr.yml
+++ b/.github/workflows/gradle-build-pr.yml
@@ -2,10 +2,7 @@ name: Run Gradle on PRs
 on: pull_request
 jobs:
   gradle:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
+    runs-on: [ ubuntu-latest ]
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-java@v1
@@ -13,6 +10,7 @@ jobs:
         java-version: 11
     - uses: eskatos/gradle-command-action@v1.3.3
       with:
+        gradle-version: current
         arguments: spotlessCheck test
         wrapper-cache-enabled: true
         dependencies-cache-enabled: true
