--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,6 +8,7 @@ spring:
       pageable:
         max-page-size: 1000
   datasource:
+    url: ${ACTUAL_DATABSE_URL}
     driverClassName: org.postgresql.Driver
   jpa:
     show-sql: true
